src/mongo/db/query/query_tester/tests/selfTests/negativeTests/compare_tests/mismatched_countB.results
mismatched_countB
mismatched_countB
test.coll as fuzzer_coll

0
:sortResults {aggregate: "fuzzer_coll", pipeline: [{$limit: 1}], cursor: {}}
[
{"_id":0,"value":"a"}
]

1
:sortResults {aggregate: "fuzzer_coll", pipeline: [{$limit: 2}], cursor: {}}
[
{"_id":0,"value":"a"},
{"_id":1,"value":"b"}
]

2
:sortResults {aggregate: "fuzzer_coll", pipeline: [{$limit: 5}], cursor: {}}
[
{"_id":0,"value":"a"},
{"_id":1,"value":"b"}
]
